--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>French Toast</h1>
+        <div><img src="../pic/french-toast.jpg" alt="Toast freshly cooked pieces of French Toast served on a plate" width ="768" height="515"></div>
+        <a href="https://www.flickr.com/photos/avlxyz/5416309323/" rel="noopener noreferrer">Photo by avlxyz</a>
         <a href="../index.html">Home</a>
     </body>
 </html>
