--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <h1>French Toast</h1>
-        <div><img src="../pic/french-toast.jpg" alt="Toast freshly cooked pieces of French Toast served on a plate" width ="768" height="515"></div>
-        <a href="https://www.flickr.com/photos/avlxyz/5416309323/" rel="noopener noreferrer">Photo by avlxyz</a>
+        <div><img src="../pic/french-toast.jpeg" alt="Fourteen pieces of french toast, densly placed on a plate" width ="717" height="478"></div>
+            <a href="https://500px.com/acurrie" rel="noopener noreferrer">Photo by Andrew Currie</a>, imported from
+            <a href="https://commons.wikimedia.org/wiki/File:French_Toast_%28185095115%29.jpeg" rel="noopener noreferrer">Wikimedia</a>
         <a href="../index.html">Home</a>
     </body>
 </html>
