Add content to the recipe pages

--- a/recipes/baked-potatoes.html
+++ b/recipes/baked-potatoes.html
@@ -7,7 +7,29 @@
     <body>
         <h1>Baked Potatoes</h1>
         <div><img src="../pic/baked-potatoes.jpg" alt="A bunch of baked potatoes covered in vegetable oil, spices, and herbs" width="720" height="480"></div>
-        <a href="https://www.pexels.com/photo/close-up-of-seasoned-potatoes-ready-for-roasting-31656933/" rel="noopener noreferrer">Photo by Patrick</a>
+        <a href="https://www.pexels.com/photo/close-up-of-seasoned-potatoes-ready-for-roasting-31656933/" rel="noopener noreferrer">Photo by Patrick.</a>
+        
+        <h2>Description</h2>
+        <p>Baked potatoes are a great main course dish that can be complimented by any sauce of your choice.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Potatoes.</li>
+            <li>Herbs: parsley, dill.</li>
+            <li>Spices: Ground garlic, black pepper.</li>
+            <li>Salt.</li>
+            <li>Vegetable oil.</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Peel and slice the potates.</li>
+            <li>Put potatoes in a bowl, pour a little vegetable oil, add spices, herbs and salt to taste, and mix.</li>
+            <li>Preheat the oven to about 170C.</li>
+            <li>Put baking paper on a baking tray, and transfer all the potatoes onto it, and move the tray into an oven.</li>
+            <li>Set the timer for 40 minutes and then raise the temperature up to 250C so the potatoes are crusty on a surface.</li>
+            <li>When the potatoes have a desired level of crispiness, take the tray out and let it cool for a bit.</li>
+        </ol>
+
         <a href="../index.html">Home</a>
     </body>
 </html>
