--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -7,8 +7,31 @@
     <body>
         <h1>French Toast</h1>
         <div><img src="../pic/french-toast.jpeg" alt="Fourteen pieces of french toast, densly placed on a plate" width ="717" height="478"></div>
-            <a href="https://500px.com/acurrie" rel="noopener noreferrer">Photo by Andrew Currie</a>, imported from
-            <a href="https://commons.wikimedia.org/wiki/File:French_Toast_%28185095115%29.jpeg" rel="noopener noreferrer">Wikimedia</a>
+        <a href="https://500px.com/acurrie" rel="noopener noreferrer">Photo by Andrew Currie</a>, imported from
+        <a href="https://commons.wikimedia.org/wiki/File:French_Toast_%28185095115%29.jpeg" rel="noopener noreferrer">Wikimedia.</a>
+        
+        <h2>Description</h2>
+        <p>Makes for a great breakfast</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>3-5 eggs.</li>
+            <li>Salt.</li>
+            <li>Sliced bread.</li>
+            <li>Vegetable oil.</li>
+            <li>Butter.</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>(Optional) Toast the sliced bread.</li>
+            <li>Whisk eggs and salt in a bowl untill it looks uniform.</li>
+            <li>Dip slices of bread in the mixture.</li>
+            <li>Preheat the pan with a bit of vegetable oil on it (you can also add a small slice of butter).</li>
+            <li>Put Slices of bread on a pan and cover and put a lid on it.</li>
+            <li>Flip the pieces once the bottom side of the toasts looks golden.</li>
+            <li>After the same happens to the other side, the dish is ready to serve (putting a piece of buttrt on top is an option).</li>
+        </ol>
+        
         <a href="../index.html">Home</a>
     </body>
 </html>
