--- a/recipes/shakshouka.html
+++ b/recipes/shakshouka.html
@@ -7,7 +7,30 @@
     <body>
         <h1>Shakshouka</h1>
         <div><img src="../pic/shakshouka.jpg" alt="A pot with shakshouka, some of which has already been served" width="500" height="750"></div>
-        <a href="https://www.pexels.com/photo/6419690/" rel="noopener noreferrer">Photo by Polina Tankilevitch</a>
+        <a href="https://www.pexels.com/photo/6419690/" rel="noopener noreferrer">Photo by Polina Tankilevitch.</a>
+        <h2>Description</h2>
+        <p></p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2-3 eggs.</li>
+            <li>2 table spoons of milk.</li>
+            <li>Butter.</li>
+            <li>1 tomato (you can use crushed, for convenience).</li>
+            <li>Any cheese.</li>
+            <li>Salt.</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Whisk eggs, milk, and salt in a bowl.</li>
+            <li>Grate a quarter of a bowl of cheese.</li>
+            <li>Cut tomato into thin slices and put those on a hot pan with a piece butter.</li>
+            <li>After all the butter dissolves and tomato slices soften up, pour egg mixture onto the pan.</li>
+            <li>Add grated cheese and mix with spatula untill eggs solidify.</li>
+            <li>Ready to serve.</li>
+        </ol>
+        
         <a href="../index.html">Home</a>
     </body>
 </html>
