--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Recipies</title>
+        <title>Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipies</h1>
+        <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/baked-potatoes.html">Baked Potatoes</a></li>
             <li><a href="./recipes/french-toast.html">French Toast</a></li>
