Change attribution link placement on pages
Links are inside paragraphs now

--- a/recipes/baked-potatoes.html
+++ b/recipes/baked-potatoes.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <h1>Baked Potatoes</h1>
-        <div><img src="../pic/baked-potatoes.jpg" alt="A bunch of baked potatoes covered in vegetable oil, spices, and herbs" width="720" height="480"></div>
-        <a href="https://www.pexels.com/photo/close-up-of-seasoned-potatoes-ready-for-roasting-31656933/" rel="noopener noreferrer">Photo by Patrick.</a>
+        <img src="../pic/baked-potatoes.jpg" alt="A bunch of baked potatoes covered in vegetable oil, spices, and herbs" width="720" height="480">
+        <p>Photo by <a href="https://www.pexels.com/photo/close-up-of-seasoned-potatoes-ready-for-roasting-31656933/" rel="noopener noreferrer">Patrick.</a></p>
         
         <h2>Description</h2>
         <p>Baked potatoes are a great main course dish that can be complimented by any sauce of your choice.</p>
