--- a/recipes/shakshouka.html
+++ b/recipes/shakshouka.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <h1>Shakshouka</h1>
-        <div><img src="../pic/shakshouka.jpg" alt="A pot with shakshouka, some of which has already been served" width="500" height="750"></div>
-        <a href="https://www.pexels.com/photo/6419690/" rel="noopener noreferrer">Photo by Polina Tankilevitch.</a>
+        <img src="../pic/shakshouka.jpg" alt="A pot with shakshouka, some of which has already been served" width="500" height="750">
+        <p>Photo by <a href="https://www.pexels.com/photo/6419690/" rel="noopener noreferrer">Polina Tankilevitch.</a></p>
         <h2>Description</h2>
         <p></p>
 
