--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/baked-potatoes.html">Baked Potatoes</a></li>
+            <li><a href="./recipes/brownies.html">Brownies</a></li>
             <li><a href="./recipes/french-toast.html">French Toast</a></li>
             <li><a href="./recipes/shakshouka.html">Shakshouka</a></li>
         </ul>
