--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <h1>Brownies</h1>
-        <div><img src="../pic/brownies.jpg" alt="A pile of qube-shaped brownies" height="500" width="750"></div>
-        <a href="https://www.pexels.com/photo/close-up-shot-of-brownies-14576526/" rel="noopener noreferrer">Photo by Bethany Hicks</a>
+        <img src="../pic/brownies.jpg" alt="A pile of qube-shaped brownies" height="500" width="750">
+        <p>Photo by <a href="https://www.pexels.com/photo/close-up-shot-of-brownies-14576526/" rel="noopener noreferrer">Bethany Hicks.</a></p>
         <h2>Description</h2>
         <ul>
             <li>Dark chocolate (55% cacao and up), 200g.</li>
