--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <h1>French Toast</h1>
-        <div><img src="../pic/french-toast.jpeg" alt="Fourteen pieces of french toast, densly placed on a plate" width ="717" height="478"></div>
-        <a href="https://500px.com/acurrie" rel="noopener noreferrer">Photo by Andrew Currie</a>, imported from
-        <a href="https://commons.wikimedia.org/wiki/File:French_Toast_%28185095115%29.jpeg" rel="noopener noreferrer">Wikimedia.</a>
-        
+        <img src="../pic/french-toast.jpeg" alt="Fourteen pieces of french toast, densly placed on a plate" width ="717" height="478">
+        <p>Photo by <a href="https://500px.com/acurrie" rel="noopener noreferrer">Andrew Currie</a>, imported from
+        <a href="https://commons.wikimedia.org/wiki/File:French_Toast_%28185095115%29.jpeg" rel="noopener noreferrer">Wikimedia.</a></p>
+
         <h2>Description</h2>
         <p>Makes for a great breakfast</p>
         <h2>Ingredients</h2>
