Add simple css styling

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <ul class="recipe-list-main-page">
             <li><a href="./recipes/baked-potatoes.html">Baked Potatoes</a></li>
             <li><a href="./recipes/brownies.html">Brownies</a></li>
             <li><a href="./recipes/french-toast.html">French Toast</a></li>
