--- a/recipes/baked-potatoes.html
+++ b/recipes/baked-potatoes.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Baked Potatoes</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Baked Potatoes</h1>
         <img src="../pic/baked-potatoes.jpg" alt="A bunch of baked potatoes covered in vegetable oil, spices, and herbs" width="720" height="480">
-        <p>Photo by <a href="https://www.pexels.com/photo/close-up-of-seasoned-potatoes-ready-for-roasting-31656933/" rel="noopener noreferrer">Patrick.</a></p>
+        <p class="link">Photo by <a href="https://www.pexels.com/photo/close-up-of-seasoned-potatoes-ready-for-roasting-31656933/" rel="noopener noreferrer">Patrick.</a></p>
         
         <h2>Description</h2>
         <p>Baked potatoes are a great main course dish that can be complimented by any sauce of your choice.</p>
@@ -30,6 +31,6 @@
             <li>When the potatoes have a desired level of crispiness, take the tray out and let it cool for a bit.</li>
         </ol>
 
-        <a href="../index.html">Home</a>
+        <a href="../index.html" class="link">Home</a>
     </body>
 </html>
