--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Brownies</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Brownies</h1>
         <img src="../pic/brownies.jpg" alt="A pile of qube-shaped brownies" height="500" width="750">
-        <p>Photo by <a href="https://www.pexels.com/photo/close-up-shot-of-brownies-14576526/" rel="noopener noreferrer">Bethany Hicks.</a></p>
+        <p class="link">Photo by <a href="https://www.pexels.com/photo/close-up-shot-of-brownies-14576526/" rel="noopener noreferrer">Bethany Hicks.</a></p>
         <h2>Description</h2>
         <ul>
             <li>Dark chocolate (55% cacao and up), 200g.</li>
@@ -25,9 +26,9 @@
             <li>Mix flour and cacao powder in a separate bowl.</li>
             <li>Add the resulting mixture into chocolate one.</li>
             <li>Pour the batter into a baking tray and put it in the oven for 25 minutes.</li>
-            <li>Cut after it's all cooled down.</li>
+            <li>Cut after it's all cools down.</li>
 
         </ol>
-        <a href="../index.html">Home</a>
+        <a href="../index.html" class="link">Home</a>
     </body>
 </html>
