--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>French Toast</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>French Toast</h1>
         <img src="../pic/french-toast.jpeg" alt="Fourteen pieces of french toast, densly placed on a plate" width ="717" height="478">
-        <p>Photo by <a href="https://500px.com/acurrie" rel="noopener noreferrer">Andrew Currie</a>, imported from
+        <p class="link">Photo by <a href="https://500px.com/acurrie" rel="noopener noreferrer">Andrew Currie</a>, imported from
         <a href="https://commons.wikimedia.org/wiki/File:French_Toast_%28185095115%29.jpeg" rel="noopener noreferrer">Wikimedia.</a></p>
 
         <h2>Description</h2>
@@ -32,6 +33,6 @@
             <li>After the same happens to the other side, the dish is ready to serve (putting a piece of buttrt on top is an option).</li>
         </ol>
         
-        <a href="../index.html">Home</a>
+        <a href="../index.html" class="link">Home</a>
     </body>
 </html>
