--- a/recipes/shakshouka.html
+++ b/recipes/shakshouka.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Shakshouka</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Shakshouka</h1>
         <img src="../pic/shakshouka.jpg" alt="A pot with shakshouka, some of which has already been served" width="500" height="750">
-        <p>Photo by <a href="https://www.pexels.com/photo/6419690/" rel="noopener noreferrer">Polina Tankilevitch.</a></p>
+        <p class="link">Photo by <a href="https://www.pexels.com/photo/6419690/" rel="noopener noreferrer">Polina Tankilevitch.</a></p>
         <h2>Description</h2>
         <p></p>
 
@@ -31,6 +32,6 @@
             <li>Ready to serve.</li>
         </ol>
         
-        <a href="../index.html">Home</a>
+        <a href="../index.html" class="link">Home</a>
     </body>
 </html>
