Fix a typo in a brownies recipe

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -26,7 +26,7 @@
             <li>Mix flour and cacao powder in a separate bowl.</li>
             <li>Add the resulting mixture into chocolate one.</li>
             <li>Pour the batter into a baking tray and put it in the oven for 25 minutes.</li>
-            <li>Cut after it's all cools down.</li>
+            <li>Cut after it's all cooled down.</li>
 
         </ol>
         <a href="../index.html" class="link">Home</a>
